Updated readme file and meta data

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Timothy Blake | Photography showcase</title>
-    <meta name="author" content="Authour name here">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here">
+    <meta name="author" content="Timothy Blake">
+    <meta name="description" content="A showcase of my photography work from Flickr">
+    <meta name="keywords" content="Photography,showcase,portfolio,pictures">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
 <!--[if lt IE 9]>
@@ -41,7 +41,7 @@
     <main>
         <div class="container">
             <section class="leading-content">
-                <h2>My photography jorney a showcase of my photos, which I've captured from my little cannon camera take a scroll through.</h2>
+                <h2>My photography journey a showcase of my photos, which I've captured from my little cannon camera take a scroll through.</h2>
             </section><!--main-content-->
 
         </div><!--container-->
@@ -72,7 +72,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-XXXXXXXX-Y', 'auto');
+      ga('create', 'UA-6425382-1', 'auto');
       ga('send', 'pageview');
 
     </script>
